<resources>
    <string name="app_name">Hugg</string>
    <string name="hugg_email">for.egg0302@gmail.com</string>
    <string name="foregg_blog">https://blog.naver.com/foregg-</string>
    <string name="word_next">다음</string>
    <string name="word_female">여성</string>
    <string name="word_male">남성</string>
    <string name="word_confirm">확인</string>
    <string name="word_round">회차</string>
    <string name="word_calendar">캘린더</string>
    <string name="word_account">가계부</string>
    <string name="word_main">홈</string>
    <string name="word_info">정보</string>
    <string name="word_profile">마이페이지</string>
    <string name="word_medicine">약</string>
    <string name="word_injection">주사</string>
    <string name="word_hospital">병원</string>
    <string name="word_etc">기타</string>
    <string name="word_every_day">매일</string>
    <string name="word_monday">월</string>
    <string name="word_tuesday">화</string>
    <string name="word_wednesday">수</string>
    <string name="word_thursday">목</string>
    <string name="word_friday">금</string>
    <string name="word_saturday">토</string>
    <string name="word_sunday">일</string>
    <string name="word_no">아니요</string>
    <string name="word_yes">네</string>
    <string name="word_logo">로고</string>
    <string name="word_schedule">일정</string>
    <string name="onboarding_skip">skip</string>
    <string name="onboarding_title_1">주사 맞을 시간엔 알람이 울려요</string>
    <string name="onboarding_title_2">여보, 우리 내일부터 과배란 주사지?</string>
    <string name="onboarding_title_3">총 얼마 썼는지 궁금할 땐?</string>
    <string name="onboarding_title_4">생활습관 챌린지로 건강하게</string>
    <string name="onboarding_content_1">정확한 시간에 맞아야 하는 주사,\n허그가 챙길 테니 안심하세요.</string>
    <string name="onboarding_content_2">진료 내용, 복약 스케줄, 하루 동안 느낀 감정까지.\n모든 과정을 남편과 공유해요.</string>
    <string name="onboarding_content_3">가계부 기능을 통해, 정부지원금과 개인 지출을\n구분하여 확인할 수 있어요.</string>
    <string name="onboarding_content_4">난자는 영양 상태, 호르몬 변화에 큰 영향을 받아요.\n챌린지를 통해 건강한 생활습관을 지켜나가요.</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_input_ssn">주민번호 앞 7자리를 적어주세요</string>
    <string name="sign_ssn_split">-</string>
    <string name="sign_share_code">배우자 공유코드</string>
    <string name="sign_share_code_male_hint">아내에게 받은 공유 코드를 입력해주세요.</string>
    <string name="sign_now_surgery_hint">현재 받고 있는 시술을 선택해주세요.</string>
    <string name="sign_progress_round">현재 진행중인 회차를 적어주세요.</string>
    <string name="sign_choose_start_treatment_day">치료 시작 날짜를 선택해주세요.</string>
    <string name="sign_share_code_female_hint">남편 회원가입시 붙여넣기 해주세요.\n아내 가입 완료 시 남편 로그인이 가능합니다.</string>
    <string name="calendar_year_and_month">%d년 %d월</string>
    <string name="calendar_create_dialog_title">일정 분류</string>
    <string name="calendar_delete_schedule">일정을 삭제하시겠습니까?</string>
    <string name="calendar_create_edit_time_am">오전</string>
    <string name="calendar_create_edit_time_pm">오후</string>
    <string name="calendar_create_schedule_title">일정 추가</string>
    <string name="calendar_edit_hospital_tab_schedule">일정</string>
    <string name="calendar_edit_hospital_record_diagnosis">진료 기록</string>
    <string name="calendar_create_edit_classification">분류</string>
    <string name="calendar_create_edit_date">날짜</string>
    <string name="calendar_create_edit_repeat_day_setting">반복 주기 설정</string>
    <string name="calendar_create_edit_start_day">시작 날짜</string>
    <string name="calendar_create_edit_end_day">종료 날짜</string>
    <string name="calendar_create_edit_repeat_week">반복 요일</string>
    <string name="calendar_create_edit_time">시간</string>
    <string name="calendar_create_edit_volume">용량</string>
    <string name="calendar_create_edit_volume_medicine_day">일</string>
    <string name="calendar_create_edit_volume_medicine_count">정</string>
    <string name="calendar_create_edit_volume_medicine_repeat">회</string>
    <string name="calendar_create_edit_volume_injection">ml</string>
    <string name="calendar_create_edit_memo">메모</string>
    <string name="calendar_create_edit_medical_record">진료</string>
    <string name="calendar_create_edit_medical_record_hint">오늘 진료 내용을 기록해보세요</string>
    <string name="calendar_create_edit_side_effect">부작용</string>
    <string name="home_adv_text">광고배너 (자동 슬라이딩)</string>
    <string name="home_empty_challenge">참여중인 챌린지가 없어요</string>
    <string name="home_challenge_text">챌린지 참여하기</string>
    <string name="today_schedule_format">%1$s님의\n%2$s월 %3$s일 일정이예요.</string>
    <string name="today_schedule_husband_format">%s, %s 님의 \n%s월 %s일 일정이에요.</string>
    <string name="today_schedule_empty_text">오늘은 일정이 없어요.</string>
    <string name="home_challenge_complete_dialog_text">오늘의 챌린지, 성공하셨나요?</string>
    <string name="home_medical_record">진료 내용</string>
    <string name="home_empty_record">오늘은 기록이 없어요</string>
    <string name="home_record_card">진료 내용 기록하기</string>
    <string name="challenge_fail_dialog">한 주간 고생 많으셨습니다.\n다음 주도 함께해요!</string>
    <string name="challenge_success_dialog">이번주 챌린지 성공하셨어요!\n다음주도 힘차게 해내보세요</string>
    <string name="challenge_dialog_positive_btn">네!</string>
    <string name="account_all">전체</string>
    <string name="account_round">회차별</string>
    <string name="account_month">월별</string>
    <string name="account_all_expend">총 지출</string>
    <string name="account_subsidy">지원금</string>
    <string name="account_subsidy_type">지원</string>
    <string name="account_personal">개인</string>
    <string name="account_personal_expand">개인 지출</string>
    <string name="account_money">금액</string>
    <string name="account_money_unit">%s원</string>
    <string name="account_money_unit_text">원</string>
    <string name="account_round_unit">%d회차</string>
    <string name="account_round_unit_text">회차</string>
    <string name="account_content">내용</string>
    <string name="account_create_title">가계부 추가</string>
    <string name="account_bottom_sheet_date_pick">기간 선택</string>
    <string name="account_bottom_sheet_one_month">1개월</string>
    <string name="account_bottom_sheet_three_month">3개월</string>
    <string name="account_bottom_sheet_last_month">지난달</string>
    <string name="account_bottom_sheet_custom_month">직접입력</string>
    <string name="daily_record">하루기록</string>
    <string name="daily_record_adverse_effect">부작용</string>
    <string name="daily_record_delete">삭제하기</string>
    <string name="daily_record_edit">수정하기</string>
    <string name="daily_record_delete_text">하루기록을 삭제하시겠습니까?</string>
    <string name="side_effect_delete_text">부작용을 삭제하시겠습니까?</string>
    <string name="create_daily_record_text">%s님\n오늘 하루 어떠셨나요?</string>
    <string name="create_daily_record_edit_text_hint">오늘의 컨디션과 감정에 대해 기록해주세요</string>
    <string name="create_daily_record_error">오늘의 하루기록이 이미 존재합니다</string>
    <string name="create_adverse_effect_text">%s님\n오늘 주사, 약 부작용은 없으셨나요?</string>
    <string name="create_adverse_effect_no_adverse_effect">부작용 없어요</string>
    <string name="create_adverse_effect_yes_adverse_effect">부작용 있어요</string>
    <string name="create_adverse_effect_edit_text_hint">어떤 부작용이 있는지 자세히 적어주세요</string>
    <string name="create_adverse_effect_done">작성 완료</string>
    <string name="profile_nickname">%s님의 정보</string>
    <string name="profile_surgery_type">시술 종류</string>
    <string name="profile_surgery_count">시술 회차</string>
    <string name="profile_surgery_start_date">시작 날짜</string>
    <string name="profile_spouse">배우자</string>
    <string name="profile_my_medicine_injection">나의 약, 주사 정보</string>
    <string name="profile_spouse_medicine_injection">%s 님의 약, 주사 정보</string>
    <string name="profile_notice">공지사항</string>
    <string name="profile_faq">FAQ</string>
    <string name="profile_ask">문의사항</string>
    <string name="profile_policy">이용약관</string>
    <string name="profile_empty_spouse">배우자 등록을 해주세요</string>
    <string name="profile_my_account_setting">계정관리</string>
    <string name="profile_edit_my_info">정보 수정</string>
    <string name="profile_hugg_email_title">Hugg 공식 메일</string>
    <string name="profile_ask_hint">어플 사용에 문의가 있으실 경우, 메일로 문의를 부탁드립니다.</string>
    <string name="profile_logout">계정 로그아웃</string>
    <string name="profile_unregister">계정 탈퇴</string>
    <string name="profile_logout_dialog">Hugg에서 로그아웃 하시겠습니까?</string>
    <string name="profile_unregister_dialog">Hugg에서 탈퇴 하시겠습니까?</string>
    <string name="profile_logout_complete_dialog">로그아웃이 완료되었습니다.</string>
    <string name="profile_unregister_complete_dialog">탈퇴가 완료되었습니다.</string>
    <string name="profile_notion_notice_link">https://abouthugg.notion.site/Hugg-c673654437704c938ec5d7762ca338a0?pvs=4</string>
    <string name="profile_notion_faq_link">https://abouthugg.notion.site/Hugg-Q-A-1d703027d86d4dd2abafce3ad594927e?pvs=4</string>
    <string name="profile_notion_policy_link">https://abouthugg.notion.site/9f6d826b7f354ec8af9a2832ad34310d?pvs=4</string>
    <string name="toast_clip_share_code">클립보드에 배우자 코드가 복사되었어요!</string>
    <string name="toast_clipboard_email">클립보드에 메일주소가 복사되었어요!</string>
    <string name="toast_error_empty_ssn">주민번호를 모두 입력해주세요.</string>
    <string name="toast_error_empty_start_date">시작 날짜를 입력해주세요.</string>
    <string name="toast_error_not_correct_share_code">유효하지 않은 배우자코드입니다.</string>
    <string name="toast_error_no_exist_schedule">존재하지 않는 일정입니다.</string>
    <string name="toast_error_repeat_day_schedule">올바른 형태의 날짜를 입력해주세요.</string>
    <string name="toast_error_blank_content_schedule">빈칸 없이 입력해주세요.</string>
    <string name="toast_error_no_exist_ledger">존재하지 않는 가계부입니다.</string>
    <string name="toast_error_no_exist_spouse">배우자가 존재하지 않습니다.</string>
    <string name="toast_success_share_injection">성공적으로 알림을 전송했어요!</string>
    <string name="toast_error_empty_side_effect">부작용을 입력해주세요.</string>
    <string name="toast_error_choice_today_emotion">오늘의 감정을 선택해주세요.</string>
    <string name="toast_error_choice_today_condition">오늘의 컨디션을 입력해주세요.</string>
    <string name="toast_error_kakao_share_fail">공유에 실패했습니다.</string>
    <string name="toast_error_kakao_share_web_fail">웹 브라우저를 설치해주세요.</string>
    <string name="toast_error_kakao_logout">로그아웃에 실패했습니다.</string>
    <string name="toast_error_kakao_unregister">카카오에서 연결끊기에 실패했습니다.</string>
    <string name="challenge_title">챌린지</string>
    <string name="challenge_my">나의 챌린지</string>
    <string name="challege_all">모든 챌린지</string>
    <string name="challenge_item_count_slash">/</string>
    <string name="challenge_participate">챌린지 참여</string>
    <string name="challenge_participate_already">참여중인 챌린지</string>
    <string name="challenge_participant_count_text">%d명이 함께하고 있어요</string>
    <string name="challenge_month_week">%d월 %d주차</string>
    <string name="challenge_stop">챌린지를 멈추시겠습니까?</string>
    <string name="challenge_empty">참여 중인 챌린지가 없어요</string>
    <string name="info_possible_subsidy">받을 수 있는 정부 지원금</string>
    <string name="info_essential">시기 별 알아야 할 필수 정보</string>
    <string name="info_woman_contents">여성을 위한 공감 콘텐츠</string>
    <string name="info_husband_contents">남편을 위한 필수 상식</string>
    <string name="info_pregnancy">정보의 바다 속\n임신 필수 정보 쏙쏙</string>
    <string name="info_infertility">허그\'s pick\n난임 추천 정보</string>
    <string name="injection_female_title">오늘 맞을 주사예요\n안내받은 가이드에 따라 투여해주세요</string>
    <string name="injection_male_title">오늘 %s님이 맞으신 주사예요</string>
    <string name="injection_share_husband">남편에게 공유</string>
    <string name="injection_share_hint">주사 기록을 남편에게 공유할 수 있어요</string>
    <string name="injection_explain">주사 설명</string>
    <string name="kakao_share_title">여보, 오늘 주사 잘 맞았어?</string>
    <string name="kakao_share_content">진료 내용, 복약 스케줄, 하루 동안 느낀 감정까지, 허그에서 서로 공유해보세요!</string>
    <string name="kakao_share_button">허그 다운로드 하기</string>
    <string name="kakao_share_url">https://play.google.com/store/apps/details?id=com.foregg.presentation</string>
    <string name="kakao_share_image">https://drive.google.com/uc?export=download&amp;id=1gOKA4dUyoZPayh5re4Gx9gISK0PyJUTj</string>
</resources>