<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include_top_bar"
                layout="@layout/include_top_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_profile"
                android:textAppearance="@style/h3"
                android:textColor="@color/gs_black"
                app:layout_constraintBottom_toBottomOf="@id/include_top_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/include_top_bar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:paddingBottom="12dp"
                android:background="@drawable/bg_rectangle_filled_white_radius_8"
                app:layout_constraintTop_toBottomOf="@id/include_top_bar">

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:textAppearance="@style/h1"
                    android:textColor="@color/gs_70"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="조경석님의 정보" />

                <ImageButton
                    android:id="@+id/img_btn_setting"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/ic_setting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_title_surgery_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_rectangle_filled_white_stroke_main_radius_4"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp"
                    android:text="@string/profile_surgery_type"
                    android:textAppearance="@style/p1"
                    android:textColor="@color/gs_90"
                    app:layout_constraintStart_toStartOf="@id/text_name"
                    app:layout_constraintTop_toBottomOf="@id/text_name" />

                <TextView
                    android:id="@+id/text_surgery_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/p1"
                    android:textColor="@color/gs_90"
                    app:layout_constraintBottom_toBottomOf="@id/text_title_surgery_type"
                    app:layout_constraintStart_toEndOf="@id/text_title_surgery_type"
                    app:layout_constraintTop_toTopOf="@id/text_title_surgery_type"
                    tools:text="체외수정 (시험관 아기)" />

                <TextView
                    android:id="@+id/text_title_surgery_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_rectangle_filled_white_stroke_main_radius_4"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp"
                    android:text="@string/profile_surgery_count"
                    android:textAppearance="@style/p1"
                    android:textColor="@color/gs_90"
                    app:layout_constraintStart_toStartOf="@id/text_name"
                    app:layout_constraintTop_toBottomOf="@id/text_title_surgery_type" />

                <TextView
                    android:id="@+id/text_surgery_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/p1"
                    android:textColor="@color/gs_90"
                    app:layout_constraintBottom_toBottomOf="@id/text_title_surgery_count"
                    app:layout_constraintStart_toEndOf="@id/text_title_surgery_count"
                    app:layout_constraintTop_toTopOf="@id/text_title_surgery_count"
                    tools:text="3회차" />

                <TextView
                    android:id="@+id/text_title_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_rectangle_filled_white_stroke_main_radius_4"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp"
                    android:text="@string/profile_surgery_start_date"
                    android:textAppearance="@style/p1"
                    android:textColor="@color/gs_90"
                    app:layout_constraintStart_toStartOf="@id/text_name"
                    app:layout_constraintTop_toBottomOf="@id/text_surgery_count" />

                <TextView
                    android:id="@+id/text_surgery_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/p1"
                    android:textColor="@color/gs_90"
                    app:layout_constraintBottom_toBottomOf="@id/text_title_start_date"
                    app:layout_constraintStart_toEndOf="@id/text_title_start_date"
                    app:layout_constraintTop_toTopOf="@id/text_title_start_date"
                    tools:text="2024-01-13" />

                <TextView
                    android:id="@+id/text_title_spouse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_rectangle_filled_white_stroke_main_radius_4"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp"
                    android:gravity="center_horizontal"
                    android:text="@string/profile_spouse"
                    android:textAppearance="@style/p1"
                    android:textColor="@color/gs_90"
                    app:layout_constraintStart_toStartOf="@id/text_name"
                    app:layout_constraintEnd_toEndOf="@id/text_title_start_date"
                    app:layout_constraintTop_toBottomOf="@id/text_title_start_date" />

                <TextView
                    android:id="@+id/text_spouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/p1"
                    android:textColor="@color/gs_90"
                    android:textColorHint="@color/gs_50"
                    app:layout_constraintBottom_toBottomOf="@id/text_title_spouse"
                    app:layout_constraintStart_toEndOf="@id/text_title_spouse"
                    app:layout_constraintTop_toTopOf="@id/text_title_spouse"
                    android:hint="@string/profile_empty_spouse" />
                
                <androidx.appcompat.widget.AppCompatButton
                    app:layout_constraintTop_toBottomOf="@id/text_title_spouse"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/profile_my_medicine_injection"
                    android:textAppearance="@style/h3"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_rectangle_filled_main_radius_6"
                    android:layout_width="0dp"
                    android:layout_height="48dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="14dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_rectangle_filled_white_radius_8"
                app:layout_constraintTop_toBottomOf="@id/constraint_layout_info">
                
                <TextView
                    android:id="@+id/text_notice"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="14dp"
                    android:textColor="@color/black"
                    android:textAppearance="@style/p2"
                    android:text="@string/profile_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/text_faq"
                    app:layout_constraintTop_toBottomOf="@id/text_notice"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="28dp"
                    android:textColor="@color/black"
                    android:textAppearance="@style/p2"
                    android:text="@string/profile_faq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/text_ask"
                    app:layout_constraintTop_toBottomOf="@id/text_faq"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="28dp"
                    android:textColor="@color/black"
                    android:textAppearance="@style/p2"
                    android:text="@string/profile_ask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/text_policy"
                    app:layout_constraintTop_toBottomOf="@id/text_ask"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="28dp"
                    android:textColor="@color/black"
                    android:textAppearance="@style/p2"
                    android:text="@string/profile_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>