<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.foregg.domain.model.enums.GenderType" />

        <import type="com.foregg.presentation.util.UserInfo" />

        <variable
            name="vm"
            type="com.foregg.presentation.ui.main.injection.InjectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <include
            android:id="@+id/include_top_bar"
            layout="@layout/include_top_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_injection"
            android:textAppearance="@style/h3"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/include_top_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_female_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/injection_female_title"
            android:textAppearance="@style/h1"
            android:textColor="@color/black"
            android:visibility="@{UserInfo.INSTANCE.info.genderType == GenderType.FEMALE ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include_top_bar" />

        <TextView
            android:id="@+id/text_male_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            tools:text="@string/injection_male_title"
            android:textAppearance="@style/h1"
            android:textColor="@color/black"
            android:visibility="@{UserInfo.INSTANCE.info.genderType == GenderType.MALE ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/img_injection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/img_injection"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:background="@color/gs_80"
            app:layout_constraintTop_toBottomOf="@id/text_female_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="66dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rectangle_filled_white_radius_6"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/img_injection">

            <TextView
                android:id="@+id/text_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/calendar_create_edit_date"
                android:textAppearance="@style/h4"
                android:textColor="@color/gs_70"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:text="@{vm.uiState.date}"
                android:textAppearance="@style/p2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2024. 04. 04" />

            <TextView
                android:id="@+id/text_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/calendar_create_edit_time"
                android:textAppearance="@style/h4"
                android:textColor="@color/gs_70"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_date_title" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:text="@{vm.uiState.time}"
                android:textAppearance="@style/p2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_date"
                tools:text="18:00" />

            <TextView
                android:id="@+id/text_injection_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/word_injection"
                android:textAppearance="@style/h4"
                android:textColor="@color/gs_70"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_time_title" />

            <TextView
                android:id="@+id/text_injection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:text="@{vm.uiState.injection}"
                android:textAppearance="@style/p2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_time"
                tools:text="주사 이름" />

            <TextView
                android:id="@+id/text_injection_explain_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/injection_explain"
                android:textAppearance="@style/h4"
                android:textColor="@color/gs_70"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_injection_title" />

            <TextView
                android:id="@+id/text_injection_explain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="15dp"
                android:gravity="end"
                android:text="@{vm.uiState.explain}"
                android:textAppearance="@style/p2"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/text_injection_explain_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_injection"
                tools:text="주사 이름" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_home"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_rectangle_filled_white_stroke_main_radius_8"
            android:onClick="@{()->vm.onClickHome()}"
            android:text="@string/word_main"
            android:textAppearance="@style/btn"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_rectangle_filled_main_radius_8"
            android:onClick="@{()->vm.onClickShare()}"
            android:text="@string/injection_share_husband"
            android:textAppearance="@style/btn"
            android:textColor="@color/white"
            android:visibility="@{UserInfo.INSTANCE.info.genderType == GenderType.FEMALE ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/btn_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/injection_share_hint"
            android:textAppearance="@style/p1_l"
            android:visibility="@{UserInfo.INSTANCE.info.genderType == GenderType.FEMALE ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/btn_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>